classDiagram
    direction LR
%% Domínios baseados em String
    class Nome {
        <<dominio>>
        - string nomeStr
        + Nome()
        + Nome(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        - void validar(const string &valor)
    }

    class Email {
        <<dominio>>
        - string emailStr
        + Email()
        + Email(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        - void validar(const string &valor)
    }

    class Ramal {
        <<dominio>>
        - string ramalStr
        + Ramal()
        + Ramal(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        - void validar(const string &valor)
    }

    class Senha {
        <<dominio>>
        - string senhaStr
        + Senha()
        + Senha(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        - void validar(string valor)
    }

    class Endereco {
        <<dominio>>
        - string enderecoStr
        + Endereco()
        + Endereco(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        - void validar(string valor)
    }

    class Codigo {
        <<dominio>>
        - string codigoStr
        + Codigo()
        + Codigo(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        - void validar(string valor)
    }

    class Cartao {
        <<dominio>>
        - string cartaoStr
        + Cartao()
        + Cartao(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        - void validar(string valor)
    }

    class Telefone {
        <<dominio>>
        - string telefoneStr
        + Telefone()
        + Telefone(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        - void validar(string valor)
    }

    class Numero {
        <<dominio>>
        - string numeroStr
        + Numero()
        + Numero(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        - void validar(string valor)
    }

%% Domínios baseados em Numéricos/Especiais
    class Capacidade {
        <<dominio>>
        - int capacidadeInt
        + Capacidade()
        + Capacidade(const int &valor)
        + void setValor(const int &valor)
        + int getValor() const
        - void validar(int valor)
    }

    class Dinheiro {
        <<dominio>>
        - float valor
        + Dinheiro()
        + Dinheiro(float)
        + void setValor(float)
        + float getValor() const
        - void validar(float)
    }

%% CLASSE DATA
    class Data {
        <<dominio>>
        + static int const TIPO_DIA
        + static int const TIPO_MES
        + static int const TIPO_ANO
        --
        + int dia
        + int mes
        + int ano
        + static int const JAN
        + static int const FEV
        + static int const MAR
        + static int const ABR
        + static int const MAI
        + static int const JUN
        + static int const JUL
        + static int const AGO
        + static int const SET
        + static int const OUT
        + static int const NOV
        + static int const DEZ
        --
        + Data()
        + Data(const string &dataStr)
        + string toString()
        + void setData(int d, int m, int a)
        + int getDia()
        + int getMes()
        + int getAno()
        - void validar(int tipo, int valor)
    }

%% Classes Abstratas e Relações de Herança
    class ValidarInt
    class exception

    ValidarInt <|-- Data
    exception <|-- Data